Document demo: Fix grid-template-columns
Says on the tin. Thanks @netceer for spotting!

Test Plan:
React to a message, there's no layout shift anymore


Reviewers: flooey, Netceer

Reviewed By: Netceer

Pull Request: https://github.com/getcord/monorepo/pull/6493

monorepo-commit: 75169b090be4cebe207b0d811c9e5d16cddbd051

--- a/document/src/css/document.css
+++ b/document/src/css/document.css
@@ -161,7 +161,7 @@ cord-thread .cord-thread-container {
   border-radius: 0;
   gap: 0;
   grid-template-rows: 18px 16px auto auto;
-  grid-template-columns: 44px auto auto auto 1fr auto;
+  grid-template-columns: 48px auto auto auto 1fr auto;
   grid-template-areas:
     'avatar authorName  sentViaIcon . optionsMenu'
     'avatar timestamp  timestamp . optionsMenu'
